final cleanup for second draft

--- a/frontmatter/acknowledgment.tex
+++ b/frontmatter/acknowledgment.tex
@@ -6,13 +6,9 @@
 \addcontentsline{toc}{section}{Acknowledgment}
 \section*{Acknowledgment}
 
-I would like to thank:
+I would like to thank my advisor Jonathan for his helpful advice, constructive feedback and assistance, Prof. Dr. Toussaint, Prof. Dr. habil. Kao and Prof. Dr. Zubow whose courses I enjoyed immensely and from whom I learned a lot, and my friends and family for their support.
 
-Firstly, my advisor Jonathan for his helpful advice, constructive feedback and assistance.
-
-Then Prof. Dr. Toussaint, Prof. Dr. habil. Kao and Prof. Dr. Zubow, whose courses I enjoyed immensely and from whom I learned a lot.
-
-And finally my friends and family for their support.  
+\nocite{fan2020,learningToSchedule,scarl}
 
 
 \begin{flushright}
