--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -11,6 +11,6 @@ Hiermit erklaare ich, dass ich die vorliegende Arbeit selbststaandig und eigenha
 
 Die selbstaendige und eigenstaendige Anfertigung versichert an Eides statt:
 \begin{center}
-Berlin, den 30. November 2021\\[3pc]
+Berlin, den 13. Dezember 2021\\[3pc]
 Nicolas Zunker
 \end{center}
