--- a/refs.bib
+++ b/refs.bib
@@ -47,37 +47,12 @@
 	pages        = {529--543},
 	doi          = {10.1109/71.932708}
 }
-@online{TracingAndVisualisation,
-	title        = {Tracing and Visualisation - Nextflow},
-	year         = 2021,
-	publisher    = {Nextflow},
-	url          = {https://www.nextflow.io/docs/latest/tracing.html#trace-report},
-	editor       = {{nextflow.io}}
-}
-@book{dag,
-	title        = {Shootstrap Pipeline DAG},
-	author       = {Nextflow},
-	year         = 2021,
-	journal      = {Nextflow},
-	publisher    = {Nextflow},
-	url          = {https://www.nextflow.io/docs/latest/_images/dag.png}
-}
 @article{Tanenbaum,
 	title        = {Programming languages for distributed computing systems},
 	author       = {Henri E. Bal and Jennifer G. Steiner and Andrew S. Tanenbaum},
 	year         = 1989,
 	journal      = {ACM Computing Surveys},
 	pages        = {32--2}
-}
-@misc{Gray,
-	title        = {Jim Gray on eScience: A Transformed Scientific Method},
-	author       = {Gray, Jim},
-	year         = 2007,
-	month        = {Jan},
-	journal      = {NRC-CSTB},
-	publisher    = {California},
-	url          = {http://languagelog.ldc.upenn.edu/myl/JimGrayOnE-Science.pdf},
-	place        = {Mountain View}
 }
 @book{Shields,
 	title        = {Control- Versus Data-Driven Workflows},
@@ -258,4 +233,11 @@
   year={2015},
   publisher={Nature Publishing Group}
 }
-
+@inproceedings{fan2020,
+  title={A theoretical analysis of deep Q-learning},
+  author={Fan, Jianqing and Wang, Zhaoran and Xie, Yuchen and Yang, Zhuoran},
+  booktitle={Learning for Dynamics and Control},
+  pages={486--489},
+  year={2020},
+  organization={PMLR}
+}
